--- a/css/media.css
+++ b/css/media.css
@@ -17,7 +17,7 @@
   }
 }
 
-@media all and (max-width: 650px) {
+/* @media all and (max-width: 650px) {
   .error {
     display: none;
   }
@@ -87,7 +87,7 @@
   }
 
   .content {
-    /* background-color: red; */
+     background-color: red;
     width: 100vw;
     height: 90vh;
     padding: 2vh;
@@ -261,3 +261,4 @@
     display: block;
   }
 }
+*/
